--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash.merge": "^4.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "sass": "^1.70.0"
