--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@types/react-input-mask": "^3.0.5",
     "@types/react-redux": "^7.1.33",
-    "axios": "^1.6.5",
     "lodash.merge": "^4.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,7 +26,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "sass": "^1.70.0",
-    "use-local-storage": "^3.0.0"
+    "use-local-storage": "^3.0.0",
+    "vite-plugin-checker": "^0.6.4"
   },
   "devDependencies": {
     "@types/lodash.merge": "^4.6.9",
